--- a/src/language/index.json
+++ b/src/language/index.json
@@ -7,7 +7,7 @@
             "services": "Xizmatlar",
             "patients": "Bemorlar",
             "education": "Fan va ta’lim",
-            "news": "Yangiliklar va voqealar",
+            "news": "Yangiliklar",
             "gallery": "Galereya",
             "contact": "Aloqa",
             "profile": "Profil",
@@ -72,7 +72,7 @@
             "services": "Услуги",
             "patients": "Пациентам",
             "education": "Наука и образование",
-            "news": "Новости и события",
+            "news": "Новости",
             "gallery": "Галерея",
             "contact": "Контакты",
             "profile": "Профиль",
@@ -137,7 +137,7 @@
             "services": "Services",
             "patients": "For Patients",
             "education": "Science & Education",
-            "news": "News & Events",
+            "news": "News",
             "gallery": "Gallery",
             "contact": "Contact",
             "profile": "Profile",
